--- a/craftersmine.LeagueBalancer/MainWindow.xaml
+++ b/craftersmine.LeagueBalancer/MainWindow.xaml
@@ -210,7 +210,7 @@
                             <ColumnDefinition/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <Button Grid.Column="0" Margin="4" x:Name="RandomizeInfoButton" Height="32" Content="Get Randomized Summoner Champions" Click="OnRandomizeInfoClick" IsEnabled="False" ToolTip="Roll champions for every player"/>
+                        <Button Grid.Column="0" Margin="4" x:Name="RandomizeInfoButton" Height="32" Content="Get Randomized Champions For All" Click="OnRandomizeInfoClick" IsEnabled="False" ToolTip="Roll champions for every player"/>
                         <Button Grid.Column="1" Margin="4" x:Name="RerollChampionButton" Height="32" Content="Reroll Summoner Champions" Click="OnRerollChampionInfoClick" IsEnabled="False" ToolTip="Reroll champions for selected player"/>
                         <Button Grid.Column="2" Margin="4" Width="32" x:Name="CopyChampionsToClipboard" Click="CopyChampionsToClipboardClick" IsEnabled="False" ToolTip="Copy all players characters into clipboard">
                             <Grid>
