--- a/craftersmine.LeagueBalancer/MainWindow.xaml
+++ b/craftersmine.LeagueBalancer/MainWindow.xaml
@@ -59,9 +59,9 @@
                         <Path Stroke="{StaticResource LeagueButtonTextColorDefault}" SnapsToDevicePixels="True"
                               Width="16" Height="16" StrokeThickness="2"
                               Data="M 4 5 L 2 5 2 14 11 14 11 12"/>
-                        <Path Stroke="{StaticResource LeagueButtonTextColorDefault}" SnapsToDevicePixels="True"
+                        <Path  SnapsToDevicePixels="True"
                               Width="16" Height="16" Fill="{StaticResource LeagueButtonTextColorDefault}"
-                              Data="M 6 3 L 6 10 L 12 10 L 9 8 L 13 4 L 12 3 L 8 6 L 6 3"/>
+                              Data="M 6 4 L 6 10 L 12 10 L 10 8 L 14 4 L 12 2 L 8 6 L 6 4"/>
                     </Grid>
                 </Button>
             </Grid>
