--- a/craftersmine.LeagueBalancer/MainWindow.xaml
+++ b/craftersmine.LeagueBalancer/MainWindow.xaml
@@ -235,11 +235,17 @@
                 </StackPanel>
             </Grid>
 
-            <TextBlock x:Name="SelectPlayerTip" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Select player in players list to generate champions"/>
-            <leagueuicontrols:Spinner Grid.Row="0" Grid.RowSpan="2" x:Name="RandomizedInfoSpinner" Visibility="Hidden"/>
-
             <Grid Grid.Row="1" x:Name="PlayerAdditionalInfoContainer" Margin="4">
-                <ListView x:Name="SelectedSummonerChampions" SelectionChanged="OnBalancedSummonersListSelectionChanged">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+
+                <TextBlock x:Name="SelectPlayerTip" Grid.Row="0" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Select player in players list to generate champions"/>
+                <leagueuicontrols:Spinner Grid.Row="0" x:Name="RandomizedInfoSpinner" Visibility="Hidden"/>
+
+                <ListView Grid.Row="0" x:Name="SelectedSummonerChampions" SelectionChanged="OnBalancedSummonersListSelectionChanged">
                     <ListView.ItemTemplate>
                         <DataTemplate DataType="{x:Type local:LeagueChampion}">
                             <Grid>
@@ -266,6 +272,10 @@
                         </DataTemplate>
                     </ListView.ItemTemplate>
                 </ListView>
+                <StackPanel Grid.Row="1">
+                    <TextBox Grid.Row="1" Height="250" x:Name="ChampPreviewTextBox" Margin="0 0 0 8" Visibility="Collapsed"/>
+                    <Button x:Name="OpenHideChampPreview" Content="Open/Hide Champions List in text form" Height="24" Click="OpenHideChampPreviewClick" SnapsToDevicePixels="True"/>
+                </StackPanel>
             </Grid>
         </Grid>
     </Grid>
