--- a/craftersmine.LeagueBalancer/MainWindow.xaml
+++ b/craftersmine.LeagueBalancer/MainWindow.xaml
@@ -29,7 +29,7 @@
         <Rectangle Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" Fill="{StaticResource LeagueWindowBackground}" Opacity="0.5"/>
 
         <TextBlock Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1" Margin="4" TextWrapping="Wrap" Foreground="{StaticResource LeagueTextColorDisabled}">
-            Made by craftersmine with ❤️ - App version 1.1.2-beta. <Hyperlink RequestNavigate="OnBottomLinkClick" x:Name="UpdateAvailableLink" Foreground="{StaticResource LeagueTextColorOnline}"><TextBlock Visibility="Collapsed" x:Name="UpdateAvailableLinkText">🔄️ Update Available!</TextBlock></Hyperlink> - 
+            Made by craftersmine with ❤️ - App version 1.1.3. <Hyperlink RequestNavigate="OnBottomLinkClick" x:Name="UpdateAvailableLink" Foreground="{StaticResource LeagueTextColorOnline}"><TextBlock Visibility="Collapsed" x:Name="UpdateAvailableLinkText">🔄️ Update Available!</TextBlock></Hyperlink> - 
             <Hyperlink NavigateUri="https://github.com/craftersmine/LeagueBalancer" RequestNavigate="OnBottomLinkClick">🔗GitHub Page</Hyperlink> - 
             <Hyperlink NavigateUri="https://github.com/craftersmine/LeagueBalancer/issues/new?assignees=&amp;labels=bug&amp;projects=&amp;template=bug_report.md&amp;title=%5BBUG%5D+Bug+report" RequestNavigate="OnBottomLinkClick">🔗Report a Bug</Hyperlink> - 
             <Hyperlink NavigateUri="https://github.com/craftersmine/LeagueBalancer/issues/new?assignees=&amp;labels=enhancement&amp;projects=&amp;template=feature_request.md&amp;title=" RequestNavigate="OnBottomLinkClick">🔗Request a feature</Hyperlink>
