--- a/craftersmine.LeagueBalancer/MainWindow.xaml
+++ b/craftersmine.LeagueBalancer/MainWindow.xaml
@@ -101,9 +101,9 @@
                             <leagueuicontrols:UserPicture Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" ImageSource="{Binding Icon}"/>
                             <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" Margin="10 2 0 0">
                                 <TextBlock VerticalAlignment="Center">
-                                    <Run Text="{Binding RiotId}"/>
+                                    <Run Text="{Binding RiotAccount.RiotId, Mode=OneWay}"/>
                                     <Run Text="#"/>
-                                    <Run Text="{Binding TagLine}"/>
+                                    <Run Text="{Binding RiotAccount.RiotIdTag, Mode=OneWay}"/>
                                 </TextBlock>
                                 <TextBlock Text="{Binding Region.RegionName}" VerticalAlignment="Center" Margin="8 0 0 0" Style="{StaticResource LeagueOfflineText}" FontSize="10pt"/>
                                 <TextBlock Text="Lvl:" VerticalAlignment="Center" Margin="8 0 0 0" Style="{StaticResource LeagueOfflineText}" FontSize="10pt"/>
