--- a/craftersmine.LeagueBalancer/MainWindow.xaml
+++ b/craftersmine.LeagueBalancer/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="craftersmine.LeagueBalancer.MainWindow"
+﻿<leagueuicontrols:LeagueWindow x:Class="craftersmine.LeagueBalancer.MainWindow"
         x:Name="Wnd"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,8 +7,22 @@
         xmlns:local="clr-namespace:craftersmine.LeagueBalancer"
         xmlns:leagueuicontrols="clr-namespace:craftersmine.Ui.League.Controls;assembly=craftersmine.Ui.League"
         mc:Ignorable="d" WindowStartupLocation="CenterScreen"
-        Title="League Closed-game Team Balancer and Champion Randomizer" Height="650" Width="1115" Style="{StaticResource LeagueWindowStyle}" MinHeight="650" MinWidth="1115" MaxWidth="1115" MaxHeight="650"
+        Title="League Closed-game Team Balancer and Champion Randomizer" Height="650" Width="1115" Style="{StaticResource LeagueMainWindowStyle}" MinHeight="650" MinWidth="1115" MaxWidth="1115" MaxHeight="650"
         ResizeMode="CanMinimize">
+    <leagueuicontrols:LeagueWindow.Header>
+        <TextBlock Text="League of Legends Custom Game Team Balancer" Style="{StaticResource LeagueHeaderText}" VerticalAlignment="Center" Margin="24 0 0 0"/>
+    </leagueuicontrols:LeagueWindow.Header>
+    <leagueuicontrols:LeagueWindow.Background>
+        <VisualBrush>
+            <VisualBrush.Visual>
+                <Image Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" Stretch="UniformToFill" Source="/BackgroundImg.png">
+                    <Image.Effect>
+                        <BlurEffect Radius="15"/>
+                    </Image.Effect>
+                </Image>
+            </VisualBrush.Visual>
+        </VisualBrush>
+    </leagueuicontrols:LeagueWindow.Background>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="300"/>
@@ -19,12 +33,6 @@
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <Image Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" Stretch="UniformToFill" Source="/BackgroundImg.png">
-            <Image.Effect>
-                <BlurEffect Radius="15"/>
-            </Image.Effect>
-        </Image>
 
         <Rectangle Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="2" Fill="{StaticResource LeagueWindowBackground}" Opacity="0.5"/>
 
@@ -283,4 +291,4 @@
             </Grid>
         </Grid>
     </Grid>
-</Window>
+</leagueuicontrols:LeagueWindow>
