--- a/craftersmine.LeagueBalancer/CrashHandlerWindow.xaml
+++ b/craftersmine.LeagueBalancer/CrashHandlerWindow.xaml
@@ -1,24 +1,26 @@
-﻿<Window x:Class="craftersmine.LeagueBalancer.CrashHandlerWindow"
+﻿<controls:LeagueWindow x:Class="craftersmine.LeagueBalancer.CrashHandlerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:craftersmine.LeagueBalancer"
+        xmlns:controls="clr-namespace:craftersmine.Ui.League.Controls;assembly=craftersmine.Ui.League"
         mc:Ignorable="d"
-        Title="An application has crashed!" Height="475" Width="525" x:Name="Wnd" ResizeMode="NoResize"
+        Title="An application has crashed!" Height="425" Width="525" x:Name="Wnd" ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
-        Style="{StaticResource LeagueWindowStyle}">
+        Style="{StaticResource LeagueMainWindowStyle}">
+    <controls:LeagueWindow.Header>
+        <StackPanel Grid.Row="0">
+            <TextBlock Margin="24 4 4 4" Text="Unfortunatelly, the application has crashed!" Style="{StaticResource LeagueHeaderText}" TextWrapping="Wrap"/>
+            <TextBlock Margin="24 4 4 4" Text="In order to debug and fix the problem, please open an issue at project GitHub page. Please include following information in text format." LineHeight="14" Style="{StaticResource LeagueDefaultText}" TextWrapping="Wrap"/>
+        </StackPanel>
+    </controls:LeagueWindow.Header>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-
-        <StackPanel Grid.Row="0">
-            <TextBlock Margin="8" Text="Unfortunatelly, the application has crashed!" Style="{StaticResource LeagueHeaderText}" TextWrapping="Wrap"/>
-            <TextBlock Margin="8" Text="In order to debug and fix the problem, please open an issue at project GitHub page. Please include following information in text format." LineHeight="14" Style="{StaticResource LeagueDefaultText}" TextWrapping="Wrap"/>
-        </StackPanel>
 
         <StackPanel Grid.Row="1" Margin="8">
             <TextBlock Text="Exception type:"/>
@@ -42,4 +44,4 @@
             <Button Grid.Column="3" Height="32" Content="Close application" Width="120" Click="CloseAppClick"/>
         </Grid>
     </Grid>
-</Window>
+</controls:LeagueWindow>
